extend the use of buttons

--- a/beta.rustforgeconf.com/src/styles/template/home.css
+++ b/beta.rustforgeconf.com/src/styles/template/home.css
@@ -1,4 +1,4 @@
-#intro-date {
+/* .big-stamp {
     background-color: var(--brand-color-light);
 
     padding: var(--spacing-smaller) var(--spacing-small);
@@ -16,4 +16,4 @@
     display: block;
     float: left;
 
-}
+} */
