--- a/www.rustforgeconf.com/src/styles/layout.css
+++ b/www.rustforgeconf.com/src/styles/layout.css
@@ -1,5 +1,5 @@
 #viewport-column {
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -7,7 +7,7 @@
 
 @media screen and (min-width: 768px) {
     #main {
-        min-height: 75vh;
+        min-height: 75dvh;
     }
 }
 
