--- a/www.rustforgeconf.com/src/styles/layout.css
+++ b/www.rustforgeconf.com/src/styles/layout.css
@@ -15,7 +15,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
